--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -23,7 +23,7 @@ jobs:
           MYSQL_DB: github_actions_test
           MYSQL_USER: root
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_PASSWORD:
+          MYSQL_PASSWORD: ''
     env:
       RAILS_ENV: test
       DATABASE_PORT: 3306
