--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -21,9 +21,7 @@ jobs:
         env:
           MYSQL_HOST: 127.0.0.1
           MYSQL_DB: github_actions_test
-          MYSQL_USER: root
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_PASSWORD: ''
+          MYSQL_ROOT_PASSWORD: ''
     env:
       RAILS_ENV: test
     steps:
