--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -20,8 +20,8 @@ jobs:
           - "3306:3306"
         env:
           MYSQL_HOST: 127.0.0.1
-          MYSQL_DB: github_actions_test
-          MYSQL_ROOT_PASSWORD: ''
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: unittest
     env:
       RAILS_ENV: test
     steps:
