--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -29,15 +29,15 @@ jobs:
         uses: ruby/setup-ruby@78c01b705fd9d5ad960d432d3a0cfa341d50e410 # v1.179.1
         with:
           bundler-cache: true
-      # - name: Set up database
-      #   env:
-      #     RAILS_ENV: test
-      #     DATABASE_URL: mysql2://root:${{ secrets.MYSQL_ROOT_PASSWORD }}@127.0.0.1:3306/rails_test
-      # - name: Set up database schema
-      #   run: bin/rails db:schema:load
+      - name: Set up database
+        env:
+          RAILS_ENV: test
+          DATABASE_URL: mysql2://root:${{ secrets.MYSQL_ROOT_PASSWORD }}@127.0.0.1:3306/rails_test
+      - name: Set up database schema
+        run: bin/rails db:schema:load
       # Add or replace test runners here
-      # - name: Run tests
-      #   run: bin/rake
+      - name: Run tests
+        run: bin/rake1
 
   # lint:
   #   runs-on: ubuntu-latest
